welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: illegal start of simple expression
move(var nbPas:Int , var verssLAvant:Boolean)
     ^Program:12: error: ')' expected but '}' found.
} 
^Program:14: error: Unmatched closing brace '}' ignored here
}
^