welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(var nbPas:Int , var verssLAvant:Boolean)
  if (versLAant) {
    for (compteur<- 1 to nbPas) {
      avance
    } else {
      for(compteurbis <-1 to nbPas) {
        recule()
      }
    }
  }
}